# nrf_sdk10_cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt
apps/blinky/: CMakeLists.txt
apps/blinky/linker_scripts/: armgcc_s110_nrf51822_xxaa.ld
apps/blinky/src/: main.c
apps/bluetooth_demo/: CMakeLists.txt
apps/bluetooth_demo/src/: main.c
cmake/: boards.cmake  gcc-arm-none-eabi.cmake  nrf51.cmake  nrf_sdk.cmake
